# f1-goat-determiner

./: .editorconfig  .gitignore  CLAUDE.md  docker-compose.prod.yaml  docker-compose.yaml  k8s-deployment-strategy.md
.claude/: settings.json
.claude/commands/: sync-report.md
.claude/hooks/: format-python.sh  format-typescript.sh  guard-migration.sh
.github/: copilot-instructions.md
.github/workflows/: deploy-test.yml  (+15 more)
analytics-api/: .dockerignore  Dockerfile  pyproject.toml  pyrightconfig.json  ruff.toml
analytics-api/src/: main.py
analytics-api/src/analyzers/: tier_list.py
analytics-api/src/api/: __init__.py  analysis.py  data.py  health.py
analytics-api/src/core/: __init__.py  config.py  data_loader.py  db.py  preprocessing.py
analytics-api/src/models/: __init__.py  schemas.py
analytics-api/tests/: conftest.py
analytics-api/tests/integration/: conftest.py  test_api.py  test_data_loader.py  test_season_filtering.py
analytics-api/tests/support/: db.py  factories.py  schema.sql
analytics-api/tests/unit/: test_api_endpoints.py  test_cache.py  test_data_loader.py  test_db.py  test_preprocessing.py  test_tier_list.py
data-sync-svc/: .dockerignore  Dockerfile  build.gradle.kts  docker-compose.yaml  gradle.properties  plan-jolpicaDataSync.prompt.md  plan-jolpicaDataSyncV2.prompt.md  settings.gradle.kts
front/: Dockerfile  tsconfig.app.json  tsconfig.node.json
frontend/: .dockerignore  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.test.json  vite.config.ts
nginx/: .dockerignore  Dockerfile  nginx.conf
(+390 files in other folders)
